# multimodal-autonomous-driving-pipeline

./: .gitignore  README.md  pyproject.toml
configs/: benchmark.example.json  calibration.example.json  calibration.example.yaml  calibration_check.example.json  qa_generation.example.json  split_generation.example.json  validation.example.json
data/sample/: README.md  scene_0001.json  scene_manifest.json  scene_manifest.yaml
scripts/: check_calibration.py  create_split.py  generate_qa.py  run_benchmark.py  validate_projection.py
src/mmdrive_pipeline/: __init__.py  pipeline.py
src/mmdrive_pipeline/analytics/: __init__.py  scene_metrics.py
src/mmdrive_pipeline/data/: __init__.py  io.py  models.py  splits.py
src/mmdrive_pipeline/geometry/: __init__.py  calibration.py  diagnostics.py  projection.py  transforms.py
src/mmdrive_pipeline/mapping/: __init__.py  detections.py
src/mmdrive_pipeline/qa/: __init__.py  context.py  filtering.py  generator.py  schemas.py  templates.py
src/mmdrive_pipeline/reporting/: __init__.py  experiment.py
src/mmdrive_pipeline/utils/: io.py
src/mmdrive_pipeline/validation/: __init__.py  projection_validator.py
tests/: __init__.py  test_benchmark_script.py  test_calibration_diagnostics.py  test_data_splits.py  test_experiment_reporting.py  test_mapping_validation.py  test_pipeline_entrypoints.py  test_projection.py  test_projection_diagnostics.py  test_qa_context.py  test_qa_pipeline.py  test_scene_analytics.py  test_workflow_scripts.py
